# nba-analysis

./: .gitignore  README.MD  pixi.toml  pyproject.toml
notebooks/: ft_leaders_distributions.ipynb  jokic_points.ipynb  point_difference_distributions.ipynb  shai_free_throws.ipynb
src/nba_analysis/: __init__.py  data.py  fits.py  plots.py
